<resources>
    <string name="app_name" translatable="false">My Pass Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="UserName">UserName</string>
    <string name="Enter">Enter</string>
    <string name="NewWebSite">New website</string>
    <string name="Password">Password</string>
    <string name="title_activity_new_web_site">Add website</string>
    <string name="Title">Title</string>
    <string name="menu_show_details">Show details</string>
    <string name="menu_delete_entry">Delete entry</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="confirm_deletion_entry">Are you sure you want delete this entry?</string>
    <string name="Card">Card</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_learn_more">Learn more</string>
    <string name="EditWebSite">Edit WebSite</string>
    <string name="Import">Import</string>
    <string name="Gallery">Gallery</string>
    <string name="Slideshow">Slideshow</string>
    <string name="Tools">Tools</string>
    <string name="Communicate">Communicate</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="Entry">Entry</string>
    <string name="menu_open_submenu">Open submenu</string>
    <string name="menu_save">Save</string>
    <string name="title_error">The title should not be empty!</string>
    <string name="text_copied_to_clipboard">The text was copied to the clipboard!</string>
    <string name="GenPass">Generate password</string>
    <string name="pass_success_gen">Password was successful generated!</string>
    <string name="entry_was_deleted">Entry was successful deleted!</string>
    <string name="last_updated">Last updated: </string>
    <string name="WebSites">Websites</string>
    <string name="menu_sort_alphabetical">Sort alphabetical</string>
    <string name="menu_sort_by_date">Sort by date</string>
    <string name="entries_was_sorted_alphabetical">Entries was sorted alphabetical!</string>
    <string name="entries_was_sorted_by_date">Entries was sorted by date!</string>
    <string name="Website">Website</string>
    <string name="CreditCards">Credit cards</string>
    <string name="DateCard">Date Card</string>
    <string name="PinCode">Pin code</string>
    <string name="Number">Number</string>
    <string name="CVV">CVV</string>
    <string name="title_activity_new_entry_credit_card">Add credit card</string>
    <string name="EditCreditCard">Edit Credit Card</string>
    <string name="Press_again">Press once again to exit!</string>
    <string name="Entries_not_load">Entries not load!</string>
    <string name="Entries_not_save">Entries not save!</string>
    <string name="Entry_not_updated">Entry not updated!</string>
    <string name="LogIn">Log In</string>
    <string name="Empty_password">Empty password!</string>
    <string name="Incorrect_password">Incorrect password!</string>
    <string name="Incorrect_old_password">Incorrect old password!</string>
    <string name="Register">Register</string>
    <string name="Confirm_Password">Confirm password</string>
    <string name="Error_save_pass">Error save password!</string>
    <string name="Confirm_not_pass">Confirmation does not match the password!</string>
    <string name="Pass_short">Password must be longer than 6 characters!</string>
    <string name="Created_new_entry">Created new entry!</string>
    <string name="Entry_saved">Entry saved!</string>
    <string name="Change_MasterPass">Change master password</string>
    <string name="LogOut">Log Out</string>
    <string name="Exit">Exit</string>
    <string name="Change">Change</string>
    <string name="New_Pass">New password</string>
    <string name="Confirm_NewPassword">Confirm new password</string>
    <string name="Old_Password">Old password</string>
    <string name="Pass_updated">Password was updated!</string>
    <string name="New_pass_short">New password must be longer than 6 characters!</string>
    <string name="Error_decrypt">Error decrypt!</string>
    <string name="Error_Run_Time">Error! RunTimeException</string>
    <string name="Text_not_copied">Text was not copied!</string>
    <string name="Name">Name</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="app_developer">developer:\nSibichenko Vjacheslav</string>
    <string name="app_year_developed" translatable="false">2017</string>
    <string name="About">About</string>
</resources>
