<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_websites"
            android:icon="@drawable/ic_website_black_24dp"
            android:title="@string/WebSites"
            android:checked="true"/>
        <item
            android:id="@+id/nav_credit_cards"
            android:icon="@drawable/ic_credit_cards_black_24dp"
            android:title="@string/CreditCards" />
        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Tools" />-->
    </group>

    <group android:id="@+id/nav_LogIn">
            <item
                android:id="@+id/nav_change_masterPass"
                android:icon="@drawable/ic_input_master_pass_black_24dp"
                android:title="@string/Change_MasterPass" />
            <item
                android:id="@+id/nav_Exit"
                android:icon="@drawable/ic_exit_black_24dp"
                android:title="@string/Exit" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Send" />
        </menu>
    </item>

    <group android:id="@+id/nav_about_group">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/About" />
    </group>

</menu>
