<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/menu_open_submenu"
        app:showAsAction="ifRoom">

   <menu>
            <item
                android:id="@+id/menu_entry_edit"
                android:icon="@drawable/ic_mode_edit_black_24dp"
                android:title="@string/menu_edit"
                android:orderInCategory="100"
                app:showAsAction="never|withText"/>
            <item
                android:id="@+id/menu_entry_delete"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/menu_delete"
                android:orderInCategory="101"
                app:showAsAction="never|withText"/>
   </menu>
    </item>

</menu>