<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditEntryCreditCardActivity"
    tools:showIn="@layout/activity_edit_entry_credit_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_entry_credit_card_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title"
            android:textSize="20sp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/edit_entry_credit_card_title_editText" />

        </android.support.design.widget.TextInputLayout>

        <View style="@style/Divider"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_entry_credit_card_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:textSize="20sp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/edit_entry_credit_card_name_editText" />

        </android.support.design.widget.TextInputLayout>

        <View style="@style/Divider"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_entry_credit_card_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Number"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/edit_entry_credit_card_number_editText"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <View style="@style/Divider"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_entry_credit_card_dateCard_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DateCard"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/edit_entry_credit_card_dateCard_editText"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <View style="@style/Divider"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_entry_credit_card_cvv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CVV"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/edit_entry_credit_card_cvv_editText"
                android:inputType="number"
                android:maxLength="3"/>
        </android.support.design.widget.TextInputLayout>

        <View style="@style/Divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_entry_credit_card_pin_code_open_symbol_imageButton"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_visibility_black_24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/transparent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_entry_credit_card_pin_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/edit_entry_credit_card_pin_code_open_symbol_imageButton">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:hint="@string/PinCode"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="24dp"
                    android:id="@+id/edit_entry_credit_card_pin_code_editText"
                    android:maxLength="4"/>


            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>



</ScrollView>
