<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue"
    tools:context=".LauncherActivity"
    android:id="@+id/root_view_launcher"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textColor="@color/White"
                android:layout_gravity="center"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/launcher_password_open_symbol_imageButton"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_visibility_black_24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="2dp"
                    android:background="@android:color/transparent" />

                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/launcher_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@id/launcher_password_open_symbol_imageButton">-->

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="2dp"
                    android:layout_toLeftOf="@id/launcher_password_open_symbol_imageButton"
                    android:id="@+id/launcher_password_editText"/>


                <!-- </android.support.design.widget.TextInputLayout>-->


            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LogIn"
                android:id="@+id/launcher_logIn_Button"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_gravity="center"
                android:theme="@style/MyAccentButton"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <!--   <ImageButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/launcher_confirm_pass_open_symbol_imageButton"
                       android:layout_alignParentRight="true"
                       android:src="@drawable/ic_visibility_black_24dp"
                       android:layout_marginTop="12dp"
                       android:layout_marginRight="2dp"
                       android:background="@android:color/transparent" />-->

                <!--   <android.support.design.widget.TextInputLayout
                       android:id="@+id/launcher_confirm_pass_layout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="8dp">-->

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/Confirm_Password"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="2dp"
                    android:id="@+id/launcher_confirm_pass_editText"/>


                <!--    </android.support.design.widget.TextInputLayout>-->


            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:id="@+id/launcher_register_Button"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_gravity="center"
                android:theme="@style/MyAccentButton" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>


